--- a/.pylintrc
+++ b/.pylintrc
@@ -22,6 +22,7 @@ disable =
   too-few-public-methods,
   super-init-not-called,
   too-many-ancestors,
+  redefined-outer-name,
 
 [REPORTS]
 output-format=colorized
