Divide integration test due to syntax error in Python 2 vs 3

--- a/tox.ini
+++ b/tox.ini
@@ -18,4 +18,11 @@ basepython =
 commands =
   pylint: pylint {posargs:} kw.cache test
   unit_tests: pytest {posargs:} --cov kw/cache test/unit
-  integration_tests: pytest {posargs:} test/integration
+
+[testenv:integration_tests-py27]
+commands =
+  integration_tests: pytest {posargs:} test/integration/2
+
+[testenv:integration_tests-py36]
+commands =
+  integration_tests: pytest {posargs:} test/integration/3
