--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@
 #    pip-compile --output-file requirements.txt requirements.in
 #
 aioredis==1.1.0 ; python_version > "3.3"
-async-timeout==2.0.0; python_version > "3.3"      # via aioredis
+async-timeout==2.0.0 ; python_version > "3.3"
 attrs==17.4.0
+enum34==1.1.6 ; python_version < "3.4"
 hiredis==0.2.0            # via aioredis
 redis==2.10.6
 simplejson==3.13.2
+typing==3.6.4 ; python_version < "3"
