--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist = coala,pylint,{integration,unit}_tests-py{27,36}
+usedevelop = True
 
 [testenv:coala]
 basepython = python3
@@ -21,8 +22,10 @@ commands =
 
 [testenv:integration_tests-py27]
 commands =
-  integration_tests: pytest {posargs:} test/integration/2
+  integration_tests: pytest {posargs:} test/integration/py2
+passenv = TEST_REDIS_URL
 
 [testenv:integration_tests-py36]
 commands =
-  integration_tests: pytest {posargs:} test/integration/3
+  integration_tests: pytest {posargs:} test/integration
+passenv = TEST_REDIS_URL
