--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,10 @@ static-analysis:
 tests:
   stage: test
   image: themattrix/tox
+  services:
+   - redis
   script:
+   - export TEST_REDIS_URL=redis://$REDIS_PORT_6379_TCP_ADDR
    - tox
   cache:
     paths:
@@ -41,7 +44,7 @@ pages:
   stage: release
   image: python:3.5-alpine
   script:
-   - apk add --no-cache make
+   - apk add --no-cache make gcc build-base
    - pip install -r requirements.txt -r test-requirements.txt -r docs-requirements.txt -e .
    - sphinx-apidoc --output-dir docs/kw --no-toc kw && make --directory=docs html
    - mv docs/_build/html public
