--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist = coala,pylint,{integration,unit}_tests-py{27,36}
 usedevelop = True
+sitepackages = True
 
 [testenv:coala]
 basepython = python3
