--- a/requirements.in
+++ b/requirements.in
@@ -1,8 +1,10 @@
 aioredis ; python_version > '3.3'
+arrow
 async-timeout ; python_version > '3.3'
 attrs
 redis
 simplejson
 sqlalchemy
+structlog
 enum34 ; python_version < '3.4'
 typing ; python_version < '3'
