--- a/test-requirements.in
+++ b/test-requirements.in
@@ -1,3 +1,5 @@
+arrow
+attrs
 coverage
 freezegun
 future
@@ -6,6 +8,7 @@ pytest
 pytest-asyncio ; python_version > "3.3"
 pytest-cov
 pytest-mock
-mock ; python_version < "3.0"
+mock
 testing.redis
 sqlalchemy
+structlog
