--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = coala,pylint,{integration,unit}_tests-py{27,36}
+envlist = coala,pylint,{integration,unit}_tests-py{27,36},coverage-report
 usedevelop = True
 
 [testenv:coala]
@@ -18,14 +18,25 @@ basepython =
   py36: python3.6
 commands =
   pylint: pylint {posargs:} kw.cache test
-  unit_tests: pytest {posargs:} --cov kw/cache test/unit
+  unit_tests: coverage run --source=kw/cache -m pytest {posargs:} test/unit
 
 [testenv:integration_tests-py27]
 commands =
-  integration_tests: pytest {posargs:} test/integration/py2
+  integration_tests: coverage run --source=kw/cache -m pytest {posargs:} test/integration/py2
 passenv = TEST_REDIS_URL
 
 [testenv:integration_tests-py36]
 commands =
-  integration_tests: pytest {posargs:} test/integration
+  integration_tests: coverage run --source=kw/cache -m pytest {posargs:} test/integration
 passenv = TEST_REDIS_URL
+
+[testenv:coverage-report]
+description = Report coverage over all measured test runs.
+basepython = python3.7
+deps = coverage
+skip_install = true
+depends = {integration,unit}_tests-py{27,36}
+commands =
+    coverage combine
+    coverage report
+    coverage xml -i {posargs:}
