--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,14 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
-aioredis==1.1.0 ; python_version > "3.3"
-async-timeout==2.0.0 ; python_version > "3.3"
-attrs==18.1.0
+aioredis==1.2.0 ; python_version > "3.3"
+async-timeout==3.0.1 ; python_version > "3.3"
+attrs==19.1.0
 enum34==1.1.6 ; python_version < "3.4"
-hiredis==0.2.0            # via aioredis
-redis==2.10.6
+hiredis==1.0.0            # via aioredis
+redis==3.3.8
 simplejson==3.16.0
-six==1.11.0               # via python-dateutil, structlog
-sqlalchemy==1.2.10
-structlog==18.1.0
-typing==3.6.4 ; python_version < "3"
+six==1.12.0               # via structlog
+sqlalchemy==1.3.7
+structlog==19.1.0
+typing==3.7.4.1 ; python_version < "3"
