Update pylint tox job definition
To avoid specifying "basepython" config option
And simplify compiled dependencies list

--- a/tox.ini
+++ b/tox.ini
@@ -12,13 +12,16 @@ commands = coala {posargs:}
 deps =
   -rrequirements.txt
   -rtest-requirements.txt
-basepython =
-  py27: python2.7
-  pylint: python3.5
-  py36: python3.6
 commands =
-  pylint: pylint {posargs:} kw.cache test
-  unit_tests: coverage run --source=kw/cache -m pytest {posargs:} test/unit
+  coverage run --source=kw/cache -m pytest {posargs:} test/unit
+
+[testenv:pylint]
+deps =
+  -rrequirements.txt
+  -rtest-requirements.txt
+  pylint
+commands =
+  pylint {posargs:} kw.cache test
 
 [testenv:integration_tests-py27]
 commands =
