Exclude not relevant pylint warnings from the config
useless-object-inheritance - because the library supports Python 2
inconsistent-return-statements - adds a necessity to add `return None`

--- a/.pylintrc
+++ b/.pylintrc
@@ -23,6 +23,8 @@ disable =
   too-few-public-methods,
   super-init-not-called,
   too-many-ancestors,
+  useless-object-inheritance,
+  inconsistent-return-statements,
 
 [REPORTS]
 output-format=colorized
