Test against Python 3.7

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = coala,pylint,{integration,unit}_tests-py{27,36},coverage-report
+envlist = coala,pylint,{integration,unit}_tests-py{27,36,37},coverage-report
 usedevelop = True
 
 [testenv:coala]
@@ -9,11 +9,13 @@ skip_install = True
 commands = coala {posargs:}
 
 [testenv]
+passenv = TEST_REDIS_URL
 deps =
   -rrequirements.txt
   -rtest-requirements.txt
 commands =
-  coverage run --source=kw/cache -m pytest {posargs:} test/unit
+  integration_tests: coverage run --source=kw/cache -m pytest {posargs:} test/integration
+  unit_tests: coverage run --source=kw/cache -m pytest {posargs:} test/unit
 
 [testenv:pylint]
 deps =
@@ -25,13 +27,7 @@ commands =
 
 [testenv:integration_tests-py27]
 commands =
-  integration_tests: coverage run --source=kw/cache -m pytest {posargs:} test/integration/py2
-passenv = TEST_REDIS_URL
-
-[testenv:integration_tests-py36]
-commands =
-  integration_tests: coverage run --source=kw/cache -m pytest {posargs:} test/integration
-passenv = TEST_REDIS_URL
+  coverage run --source=kw/cache -m pytest {posargs:} test/integration/py2
 
 [testenv:coverage-report]
 description = Report coverage over all measured test runs.
